5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1876_1598.log
== TEST (2019-07-03 18:18:49) 
-- CODE:
from numpy import*
item = array(eval(input("digite item: ")))

desc = 5.00

while(item > 80.00):
	item = item - desc

print(round(item ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:20:16) 
-- CODE:
from numpy import*
item = array(eval(input("digite item: ")))
cont = 0
desc = 5.00

while(item > 80.00):
	item = item - desc
	cont = cont + 1

print(round(item ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:26:28) 
-- CODE:
from numpy import*
item = array(eval(input("digite item: ")))
cont = 0
desc = 5.00

while(item > 80.00):
	item = item - desc
	cont = cont + 1

print(round(item ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:30:38) 
-- CODE:
from numpy import*
item = array(eval(input("digite item: ")))
cont = 0
desc = 5

while(item > 80):
	item = item - desc
	cont = cont + 1

print(round(item ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:32:27) 
-- CODE:
from numpy import*

item = array(eval(input("digite item: ")))

cont = 0
desc = 5

while(item > 80):
	item = item - desc
	cont = cont + 1

print(round(cont ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:38:55) 
-- CODE:
from numpy import*

item = array(eval(input("digite item: ")))

cont = 0
desc = 0

while(item > 80.00):
	if(item > 80.00):
		desc = desc * 5.00
		cont = cont + 1

print(round(item ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:27) 
-- CODE:
from numpy import*

item = array(eval(input("digite item: ")))

cont = 0
desc = 0

while(item = 5.00):
	if(item > 80.00):
		desc = desc * 5.00
		cont = cont + 1

print(round(item ,2))
	
-- ERROR:
File "XXXX", line 8
    while(item = 5.00):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:38) 
-- CODE:
from numpy import*

item = array(eval(input("digite item: ")))

cont = 0
desc = 5.00

while(item > 80.00):
	if(item > 80.00):
		item = item - desc
		cont = cont + 1
	elif(item < 80.00):
		cont = cont + 1

print(round(item ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:43:54) 
-- CODE:
from numpy import*

item = array(eval(input("digite item: ")))

cont = 0
desc = 5.00

while(item > 80.00):
	if(item > 80.00):
		item = item - desc
		cont = cont + 1
	elif(item < 80.00):
		cont = cont + 1
		print(round(cont ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:44:31) 
-- CODE:
from numpy import*

item = array(eval(input("digite item: ")))

cont = 0
desc = 5.00

while(item > 80.00 or item < 80.00):
	if(item > 80.00):
		item = item - desc
		cont = cont + 1
	elif(item < 80.00):
		cont = cont + 1
		print(round(cont ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:19) 
-- CODE:
from numpy import*

item = array(eval(input("digite item: ")))

cont = 0
desc = 5.00

while((item > 80.00) or (item < 80.00)):
	if(item > 80.00):
		item = item - desc
		cont = cont + 1
	elif(item < 80.00):
		cont = cont + 1
		print(round(cont ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:46:42) 
-- CODE:
from numpy import*

item = array(eval(input("digite item: ")))

cont = 0
desc = 5.00

#while(item > 80.00 ):
	if(item > 80.00):
		item = item - desc
		cont = cont + 1
	elif(item < 80.00):
		cont = cont + 1
		print(round(cont ,2))
	
-- ERROR:
File "XXXX", line 9
    if(item > 80.00):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:56:34) 
-- CODE:
from numpy import*
valor = array(eval(input("digite valor: ")))

cont = 0
#desc = 5.00

while(size[valor] <= 3 ):
	if(valor[cont] > 80.00):
		valor[cont] = valor[cont] + (valor -5)
	print(round(valor ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:57:14) 
-- CODE:
from numpy import*
valor = array(eval(input("digite valor: ")))

cont = 0
#desc = 5.00

while(size[valor] > 80.00 ):
	if(valor[cont] > 80.00):
		valor[cont] = valor[cont] + (valor -5)
	print(round(valor ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:05:56) 
-- CODE:
from numpy import*
valor = array(eval(input("digite valor: ")))
soma = 0
cont = 0
desc = 5.00

while():
	if(valor > 80.00):
		valor = valor - 5.00
		cont = cont + 1
		soma = soma + 1
		print(round(volor, 2))
	else:
		cont = cont + 1
		soma = soma + 1
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:07:27) 
-- CODE:
from numpy import*
valor = array(eval(input("digite valor: ")))
soma = 0
cont = 0
desc = 5.00

#while():
	if(valor > 80.00):
		valor = valor - 5.00
		cont = cont + 1
		soma = soma + 1
	else:
		cont = cont + 1
		soma = soma + 1
print(round(valor, 2))


-- ERROR:
File "XXXX", line 8
    if(valor > 80.00):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:08:22) 
-- CODE:
from numpy import*
valor = array(eval(input("digite valor: ")))
soma = 0
cont = 0
desc = 5.00

while(valor > 80.00 and valor < 80.00):
	if(valor > 80.00):
		valor = valor - 5.00
		cont = cont + 1
		soma = soma + 1
	else:
		cont = cont + 1
		soma = soma + 1
print(round(valor, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:10:04) 
-- CODE:
from numpy import*
valor = array(eval(input("digite valor: ")))
soma = 0
cont = 0
desc = 5.00

while(valor > 80.00 and valor < 80.00):
	if(valor > 80.00):
		valor = valor - desc
		cont = cont + 1
		soma = soma + 1
	else:
		cont = cont + 1
		soma = soma + 1
print(round(valor, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
